--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -21,7 +21,12 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update -- .github/workflows/python-package-conda.yml  --name base
+        conda env update -- .Run conda env update -- .github/workflows/python-package-conda.yml  --name base
+  shell: /usr/bin/bash -e {0}
+  env:
+    pythonLocation: /opt/hostedtoolcache/Python/3.10.14/x64
+    LD_LIBRARY_PATH: /opt/hostedtoolcache/Python/3.10.14/x64/lib
+usage: conda [-h] [-v] [--no-plugins] [-V] COMMAND ...  --name base
     - name: Lint with flake8
       run: |
         conda install flake8
